add book logic