@@ -59,12 +59,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>6.1.14</version>
-        </dependency>
-
-        <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
             <version>3.0.0</version>
@@ -77,6 +71,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.3.5</version>
         </dependency>
@@ -85,8 +84,6 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>3.3.5</version>
         </dependency>
-
-
     </dependencies>
 
     <build>
@@ -98,6 +95,10 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArguments>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </compilerArguments>
                 </configuration>
             </plugin>
             <plugin>
@@ -116,6 +117,10 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <compilerArgs>
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
